package com.ebay.mobile.example.test;



import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import androidx.test.rule.ActivityTestRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;


@RunWith(AndroidJUnit4.class)
public class MainActivityTest {
    @Rule
    public ActivityTestRule<MainActivity> activityRule = new ActivityTestRule<>(
            MainActivity.class);

    @Test
    public void hide() {

        //Assert if Hide me text view is visible

        onView(withId(R.id.textView))
                .check(matches(withText("Hide me!")));

        //Assert if button isDisplay or Enabled

        onView(withId(R.id.button))
                .check(matches(withText("Hide")))
                .perform(click());

        onView(withId(R.id.button)).check(matches(withText("SHOW"))).perform(click());
               // .check(matches(withText("SHOW")))
               // .perform(click());


                                                                            

    }
}

